force-app/main/default/objects/CIF_Header__c/CIF_Header__c.object-meta.xml
<CustomObject>
    <description>CIF Header</description>
    <label>CIF Header</label>
    <nameField>
        <label>CIF Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIF Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>