force-app/main/default/objects/CIF_Header__c/fields/FS_CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_CIF_Number__c</fullName>
    <displayFormat>CIF-{000000}</displayFormat>
    <label>CIF #</label>
    <type>AutoNumber</type>
</CustomField>