force-app/main/default/objects/CIF_Header__c/fields/FS_COM_User_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_COM_User_Name__c</fullName>
    <formula>FSCOM__r.UserId__r.FirstName&amp;&quot; &quot;&amp; FSCOM__r.UserId__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COM User Name</label>
    <type>Text</type>
</CustomField>