force-app/main/default/objects/CIF_Header__c/fields/FS_CustomCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre FET 4.1 Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CIF_Headers1</relationshipName>
    <type>Lookup</type>
</CustomField>