force-app/main/default/objects/CIF_Header__c/fields/FS_CustomCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomCreatedDate__c</fullName>
    <label>Pre FET 4.1 Created Date</label>
    <type>DateTime</type>
</CustomField>