force-app/main/default/objects/CIF_Header__c/fields/FS_CustomLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomLastModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre FET 4.1 Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CIF_Headers2</relationshipName>
    <type>Lookup</type>
</CustomField>