force-app/main/default/objects/CIF_Header__c/fields/FS_CustomLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomLastModifiedDate__c</fullName>
    <label>Pre FET 4.1 Last Modified Date</label>
    <type>DateTime</type>
</CustomField>