force-app/main/default/objects/CIF_Header__c/fields/FS_EP__c.field-meta.xml
<CustomField>
    <fullName>FS_EP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EP</label>
    <referenceTo>FS_Execution_Plan__c</referenceTo>
    <relationshipName>CIF_Head</relationshipName>
    <type>Lookup</type>
</CustomField>