force-app/main/default/objects/CIF_Header__c/fields/FS_FPS__c.field-meta.xml
<CustomField>
    <fullName>FS_FPS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FPS User</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS FPS_P</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS AC_P</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS PM_P</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS Admin PM_P</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CIF_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>