force-app/main/default/objects/CIF_Header__c/fields/FS_HQ__c.field-meta.xml
<CustomField>
    <fullName>FS_HQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HQ Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CIF_Head</relationshipName>
    <type>Lookup</type>
</CustomField>