force-app/main/default/objects/CIF_Header__c/fields/FS_MigratedCIFId__c.field-meta.xml
<CustomField>
    <fullName>FS_MigratedCIFId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>FET 4.1 Change Migrate Old CIF records to CIF and CIF Header Objects</inlineHelpText>
    <label>MigratedCIFId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>