force-app/main/default/objects/CIF_Header__c/fields/FS_Original_CIF_Head__c.field-meta.xml
<CustomField>
    <fullName>FS_Original_CIF_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original CIF Head</label>
    <referenceTo>CIF_Header__c</referenceTo>
    <relationshipName>CIF_Head</relationshipName>
    <type>Lookup</type>
</CustomField>