force-app/main/default/objects/CIF_Header__c/fields/FS_Reparent_CIF__c.field-meta.xml
<CustomField>
    <fullName>FS_Reparent_CIF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check whether the CIF is Re-parented.</description>
    <label>Reparent CIF</label>
    <type>Checkbox</type>
</CustomField>