force-app/main/default/objects/CIF_Header__c/fields/FS_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Sales_Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AccountTeamMember__c.AccountId__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Headquarters</value>
        </filterItems>
        <filterItems>
            <field>AccountTeamMember__c.AccountId__c</field>
            <operation>equals</operation>
            <valueField>$Source.FS_HQ__c</valueField>
        </filterItems>
        <filterItems>
            <field>AccountTeamMember__c.TeamMemberRole__c</field>
            <operation>equals</operation>
            <value>Sales Team Member</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountTeamMember__c</referenceTo>
    <relationshipLabel>CIF Headers</relationshipLabel>
    <relationshipName>CIF_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>