force-app/main/default/objects/CIF_Header__c/fields/FS_Sales_Rep_user_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Sales_Rep_user_Name__c</fullName>
    <formula>FS_Sales_Rep_Name__r.UserId__r.FirstName&amp;&quot; &quot;&amp; FS_Sales_Rep_Name__r.UserId__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep  User Name</label>
    <type>Text</type>
</CustomField>