force-app/main/default/objects/CIF_Header__c/fields/FS_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Status__c</fullName>
    <inlineHelpText>In Progress Ã¢â‚¬â€œ CIF is still open or a site assessment is still opens
Closed Ã¢â‚¬â€œ Cancelled or Not Approved Ã¢â‚¬â€œ All outlets are either cancelled or not approved to move forward
Closed Ã¢â‚¬â€œ Converted to EP. The CIF has been converted to an EP and closed</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>SS Submitted</fullName>
            </value>
            <value>
                <fullName>SA Submitted</fullName>
            </value>
            <value>
                <fullName>EP Submitted</fullName>
            </value>
            <value>
                <fullName>SS Approved</fullName>
            </value>
            <value>
                <fullName>SA Approved</fullName>
            </value>
            <value>
                <fullName>EP Created</fullName>
            </value>
            <value>
                <fullName>Closed Ã¢â‚¬â€œ Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed Ã¢â‚¬â€œ Converted to EP</fullName>
            </value>
            <value>
                <fullName>Closed Ã¢â‚¬â€œ Cancelled or Not Approved</fullName>
            </value>
            <value>
                <fullName>Closed Ã¢â‚¬â€œNot Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>