force-app/main/default/objects/CIF_Header__c/fields/FS_Tech_Note__c.field-meta.xml
<CustomField>
    <fullName>FS_Tech_Note__c</fullName>
    <label>Technical Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>