force-app/main/default/objects/CIF_Header__c/fields/FS_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_Version__c</fullName>
    <label>Version</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>