force-app/main/default/objects/CIF_Header__c/fields/FSCOM__c.field-meta.xml
<CustomField>
    <fullName>FSCOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COM User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AccountTeamMember__c.TeamMemberRole__c</field>
            <operation>equals</operation>
            <value>COM</value>
        </filterItems>
        <filterItems>
            <field>AccountTeamMember__c.AccountId__c</field>
            <operation>equals</operation>
            <valueField>$Source.FS_HQ__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountTeamMember__c</referenceTo>
    <relationshipLabel>CIF Headers (COM)</relationshipLabel>
    <relationshipName>CIF_Headers1</relationshipName>
    <type>Lookup</type>
</CustomField>