force-app/main/default/objects/CIF_Header__c/fields/FSSales_Lead__c.field-meta.xml
<CustomField>
    <fullName>FSSales_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Lead</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AccountTeamMember__c.TeamMemberRole__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountTeamMember__c</referenceTo>
    <relationshipLabel>CIF Headers (Sales Lead)</relationshipLabel>
    <relationshipName>CIF_Headers2</relationshipName>
    <type>Lookup</type>
</CustomField>