force-app/main/default/objects/CIF_Header__c/fields/Is_FET4_Migrated_CIF_Header__c.field-meta.xml
<CustomField>
    <fullName>Is_FET4_Migrated_CIF_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DM Check for CIF</description>
    <label>Is FET4 Migrated CIF Header</label>
    <type>Checkbox</type>
</CustomField>