force-app/main/default/objects/CIF_Header__c/fields/Is_FET4_Migrated_CIF_Header_v2__c.field-meta.xml
<CustomField>
    <fullName>Is_FET4_Migrated_CIF_Header_v2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is FET4 Migrated CIF Header v2</label>
    <type>Checkbox</type>
</CustomField>